--- a/Blacklighting/RegisterPage.xaml
+++ b/Blacklighting/RegisterPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="Blacklighting.EditPage"
+    x:Class="Blacklighting.RegisterPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -22,22 +22,11 @@
 
         <!--TitlePanel 包含应用程序的名称和页标题-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="新微博" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="注册" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
-        <TextBox HorizontalAlignment="Left" Height="350" Margin="14,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="456"/>
+
+        <!--ContentPanel - 在此处放置其他内容-->
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"/>
     </Grid>
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsMenuEnabled="True" IsVisible="True">
-            <shell:ApplicationBarIconButton IconUri="\appbar.add.rest.png" Text="发送" Click="Send_Click">
-            </shell:ApplicationBarIconButton>
-            <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Text="添加图片">
-                </shell:ApplicationBarMenuItem>
-                <shell:ApplicationBarMenuItem Text="添加音频">
-                </shell:ApplicationBarMenuItem>
-                <shell:ApplicationBarMenuItem Text="添加视频">
-                </shell:ApplicationBarMenuItem>
-            </shell:ApplicationBar.MenuItems>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
+
 </phone:PhoneApplicationPage>
