--- a/Blacklighting/App.xaml
+++ b/Blacklighting/App.xaml
@@ -1,20 +1,10 @@
-﻿<Application
-    x:Class="Blacklighting.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
-
-    <!--应用程序资源-->
-    <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:Blacklighting" x:Key="LocalizedStrings"/>
+<Application x:Class="Blacklighting.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+  <!--应用程序资源-->
+  <Application.Resources>
+        <local:LocalizedStrings xmlns:local="clr-namespace:Blacklighting" x:Key="LocalizedStrings" />
     </Application.Resources>
-
-    <Application.ApplicationLifetimeObjects>
-        <!--处理应用程序的生存期事件所需的对象-->
-        <shell:PhoneApplicationService
-            Launching="Application_Launching" Closing="Application_Closing"
-            Activated="Application_Activated" Deactivated="Application_Deactivated"/>
-    </Application.ApplicationLifetimeObjects>
-
+  <Application.ApplicationLifetimeObjects>
+    <!--处理应用程序的生存期事件所需的对象-->
+    <shell:PhoneApplicationService Launching="Application_Launching" Closing="Application_Closing" Activated="Application_Activated" Deactivated="Application_Deactivated" />
+  </Application.ApplicationLifetimeObjects>
 </Application>
