--- a/Blacklighting/MainPage.xaml
+++ b/Blacklighting/MainPage.xaml
@@ -12,7 +12,8 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="False"
+    Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -21,25 +22,19 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!--TitlePanel 包含应用程序的名称和页标题-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="登录Blacklighting" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="48"/>
-        </StackPanel>
+        <TextBlock 
+            Text="登录Blacklighting" 
+            Margin="10,10,0,694" 
+            Style="{StaticResource PhoneTextTitle1Style}" 
+            FontSize="48" Grid.RowSpan="2"/>
+        <phone:WebBrowser 
+            x:Name="oAuthLoginBrowser" 
+            HorizontalAlignment="Left" 
+            IsScriptEnabled="True" 
+            Margin="0,106,0,0" 
+            Grid.Row="1" 
+            VerticalAlignment="Top" 
+            Height="694" Width="480"/>
 
-        <!--ContentPanel - 在此处放置其他内容-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="14,0,10,0">
-            <TextBlock HorizontalAlignment="Left" Margin="75,230,0,0" TextWrapping="Wrap" Text="帐号" VerticalAlignment="Top" Height="60" Width="80" FontSize="36"/>
-            <TextBlock HorizontalAlignment="Left" Margin="75,295,0,0" TextWrapping="Wrap" Text="密码" VerticalAlignment="Top" Height="45" Width="80" FontSize="36"/>
-            <TextBox HorizontalAlignment="Left" Height="60" Margin="155,228,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="220" FontSize="20"/>
-            <CheckBox Content="记住密码" HorizontalAlignment="Left" Margin="155,350,0,0" VerticalAlignment="Top" Height="75" Width="166" FontSize="20" BorderThickness="1"/>
-            <Button Content="登  录" HorizontalAlignment="Left" Margin="75,425,0,0" VerticalAlignment="Top" Click="loginButton_Click">
-            </Button>
-            <PasswordBox HorizontalAlignment="Left" Margin="155,290,0,0" VerticalAlignment="Top" Height="60" Width="220"/>
-            <Button Content="注  册" HorizontalAlignment="Left" Margin="266,425,0,0" VerticalAlignment="Top" Click="registerButton_Click"/>
-            <Button Content="忘记密码？" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" FontSize="18" BorderThickness="0"/>
-            <Image Height="100" Margin="183,100,173,0" VerticalAlignment="Top" Width="100" HorizontalAlignment="Center"/>
-
-        </Grid>
     </Grid>
-
 </phone:PhoneApplicationPage>
